--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Optical Calculator</title>
 </head>
 <body class="uk-background-primary">
-	
+	<h1 class="uk-heading-line uk-text-center"><span>UI-DSM Calculator</span></h1>
 	<div style="margin-top: 10vh;">
 		<div class="uk-margin" uk-margin>
 	        <label style="color: black;margin-right: 5px;">Number Of Channels:</label>
