--- a/index.html
+++ b/index.html
@@ -117,9 +117,14 @@ $("#submit-button").on("click",function(){
 					var string = "<div class='uk-margin uk-card uk-card-default'>";
 					var string2 = "</div>";
 					k = 0;
+
+					if(counter > N-1){
+						break;
+					}
 					if (BaseUnit - 2*iterator == 1){
 						string = string + "Surplus Channel Spacings = ";
 					}
+					
 					while(k<=iterator){
 						if(BaseUnit - 2*iterator == 1){
 						string = string + " " + counter;
@@ -136,7 +141,7 @@ $("#submit-button").on("click",function(){
 					string = string + string2;
 
 					$("#element").append(string);
-					if(counter >= N-1){
+					if(counter > N-1){
 						break;
 					}
 					iterator = iterator + 1;
