--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 <style type="text/css">
 	body{
 		width: 100vw;
-		height: 100vh;
+		min-height: 100vh;
 		display: flex;
 		flex-direction: column;
 		align-items:  center;
+		overflow:auto;
 	}
 	#element{
 		color: #fff;
@@ -130,7 +131,7 @@ $("#submit-button").on("click",function(){
 					if(counter > N-1){
 						break;
 					}
-					if (k <= 1){
+					if (k <= 0){
 						string = string + "Surplus Channel Spacings = ";
 					}else{
 						string = string + "Delta Frequency :<br>";
